--- a/views/template/_css/style.css
+++ b/views/template/_css/style.css
@@ -5,7 +5,9 @@
 body {
 	background-color: #EEE;
 	min-width: 1000px;
+	font-family: arial, sans-serif;
 }
+/* MENU */
 #menu {
 	position: fixed;
 	top: 100px;
@@ -43,6 +45,39 @@ body {
 	border-left: 15px solid #000;
 	transition: all 0.3s ease;
 }
+/* FIN MENU */
+
+/* CONNEXION */
+#register {
+	width: 220px;
+	padding: 10px;
+	margin: 100px auto 0 auto;
+	background-color: #FFF;
+	border: 1px solid #8ab928;
+}
+#register label {
+	font-size: 1em;
+	color: #93ab61;
+}
+#register label, #register input {
+	display: block;
+	margin: 10px 0;
+}
+#register input {
+	width: 98%;
+	padding: 0 1%;
+	height: 30px;
+	background-color: #EEE;
+	border: 0;
+}
+#register input[name="submit"] {
+	background-color: #8ab928;
+	color: #FFF;
+	padding: 0;
+	cursor: pointer;
+}
+/* FIN CONNEXION */
+
 #save {
 	position: fixed;
 	bottom: 30px;
@@ -63,6 +98,13 @@ body {
 	width: 900px;
 	margin: 0 auto;
 }
+#content {
+	width: 880px;
+	margin: 20px auto;
+	background-color: #FFF;
+	border: 1px solid #8ab928;
+	padding: 10px;
+}
 label {
 	font-family: arial, sans-serif;
 	font-size: 0.8rem;
@@ -82,7 +124,7 @@ fieldset {
 #prestation {
 	background: url('../_img/prestation.jpg') 90% 90% no-repeat #FFF;
 }
-legend {
+#formulaire legend {
 	border: 1px solid #8ab928;
 	padding: 5px 10px;
 	margin-left: 20px;
@@ -91,11 +133,11 @@ legend {
 	font-family: arial, sans-serif;
 	font-size: 1rem;
 }
-label, input, textarea, select {
+#formulaire label, #formulaire input, #formulaire textarea, #formulaire select {
 	margin: 10px 3px;
 	padding: 3px 2px;
 }
-input, select, textarea {
+#formulaire input, #formulaire select, #formulaire textarea {
 	border: 1px solid #cccccc !important;
 }
 input:focus {
@@ -107,4 +149,14 @@ input:focus {
 }
 #prestation select {
 	width: 300px;
+}
+/* TEXTE */
+h1 {
+	font-size: 2em;
+	text-align: center;
+	color: #8ab928;
+}
+p.message {
+	text-align: center;
+	margin: 20px 0;
 }
