--- a/views/template/_css/style.css
+++ b/views/template/_css/style.css
@@ -1,6 +1,8 @@
 * {
 	margin: 0;
 	padding: 0;
+	list-style-type: none;
+	text-decoration: none;
 }
 body {
 	background-color: #EEE;
@@ -18,9 +20,6 @@ body {
 	left: 0;
 	transition: all 1s ease;
 }
-#menu ul {
-	list-style-type: none;
-}
 #menu ul li a {
 	display: block;
 	width: 220px;
@@ -29,7 +28,6 @@ body {
 	font-size: 1rem;
 	line-height: 50px;
 	color: #FFF;
-	text-decoration: none;
 	background-color: #8ab928;
 	text-align: right;
 	font-family: arial, sans-serif;
@@ -44,6 +42,55 @@ body {
 	background-color: #000;
 	border-left: 15px solid #000;
 	transition: all 0.3s ease;
+}
+#modele {
+	width: 450px;
+	display: none;
+	padding: 20px 0;
+	position: absolute;
+	top: 150px;
+	left: 50%;
+	margin-left: -250px;
+	border: 1px solid #8ab928;
+	background-color: #FFF;
+	z-index: 9999;
+}
+#modele ul li a {
+	display: block;
+	width: 398px;
+	height: 40px;
+	line-height: 40px;
+	font-size: 1.5em;
+	margin: 5px auto;
+	color: #8ab928;
+	border: 1px solid #8ab928;
+	background-color: #FFF;
+	text-align: center;
+	transition: all 0.5s ease;
+}
+#modele ul li a:hover {
+	border-left: 20px solid #8ab928;
+	border-right: 20px solid #8ab928;
+	width: 360px;
+	transition: all 0.5s ease;
+}
+#cross {
+	color: #FFF;
+	position: absolute;
+	top: -70px;
+	right: -70px;
+	cursor: pointer;
+	z-index: 7777;
+}
+#filtre {
+	display: none;
+	position: absolute;
+	top: 0;
+	width: 100%;
+	height: 100%;
+	background-color: #000;
+	opacity: 0.6;
+	z-index: 5555;
 }
 /* FIN MENU */
 
@@ -99,11 +146,28 @@ body {
 	margin: 0 auto;
 }
 #content {
-	width: 880px;
+	width: 860px;
 	margin: 20px auto;
 	background-color: #FFF;
 	border: 1px solid #8ab928;
-	padding: 10px;
+	padding: 20px;
+}
+#content nav {
+	margin: 20px 0;
+}
+#content nav ul li a {
+	display: block;
+	margin: 5px auto;
+	width: 400px;
+	height: 50px;
+	text-align: center;
+	line-height: 50px;
+	background-color: #8ab928;
+	color: #FFF;
+	font-size: 1em;
+}
+#content nav ul li:hover a {
+	background-color: #000;
 }
 label {
 	font-family: arial, sans-serif;
@@ -150,13 +214,46 @@ input:focus {
 #prestation select {
 	width: 300px;
 }
+#content input[type='radio'] {
+	margin: 0 5px;
+	border: 1px solid #8ab928;
+}
+#content input[type='text'] {
+	width: 250px;
+	padding: 5px;
+	border: 0;
+	background-color: #EEE;
+	border: 1px solid #EEE;
+}
+#content input[type='submit'] {
+	padding: 5px 20px;
+	border: 0;
+	background-color: #8ab928;
+	border: 1px solid #8ab928;
+	color: #FFF;
+	cursor: pointer;
+}
 /* TEXTE */
-h1 {
+#register h1, h1 {
 	font-size: 2em;
-	text-align: center;
 	color: #8ab928;
+	margin: 0 0 10px 0;
+}
+#register h1 {
+	text-align: center;
+}
+#modele h2 {
+	font-size: 2em;
+	font-weight: 100;
+	color: #666;
+	margin-bottom: 20px;
+	text-align: center;
 }
 p.message {
 	text-align: center;
 	margin: 20px 0;
+}
+img.aligncenter {
+	display: block;
+	margin: 20px auto;
 }
