--- a/views/template/_css/style.css
+++ b/views/template/_css/style.css
@@ -230,7 +230,7 @@ fieldset {
 	background: url('../_img/infos.png') 90% 90% no-repeat #FFF;
 }
 #prestation {
-	background: url('../_img/prestation.jpg') 90% 90% no-repeat #FFF;
+	background: url('../_img/prestation.jpg') 90% 30px no-repeat #FFF;
 }
 #formulaire legend {
 	border: 1px solid #8ab928;
@@ -253,10 +253,15 @@ input:focus {
 }
 #prestation label {
 	display: inline-block;
+}
+#prestation label.short {
 	width: 70px;
 }
 #prestation select {
 	width: 300px;
+}
+#prestation select.short {
+	width: 200px;
 }
 #content input[type='radio'] {
 	margin: 0 5px;
